added slave lorem

--- a/4.3 HTML Porfolio Project/public/contact.html
+++ b/4.3 HTML Porfolio Project/public/contact.html
@@ -6,5 +6,6 @@
   abc 12cc<br />
   delhi<br />
   India<br />
+  <p>im slave</p>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, quidem dolorem ducimus ut quaerat laborum consequuntur ab id delectus dignissimos mollitia, iusto, doloribus recusandae magnam quasi officiis laudantium sit officia at obcaecati alias accusantium. Possimus neque aut aperiam corporis illum cupiditate, libero earum ut nam facere rerum fugiat quam id?</p>
 </p>
